--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,19 @@
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
+
+# Vite Ruby
+/public/vite
+/public/vite-dev
+/public/vite-test
+node_modules
+*.local
+.DS_Store
+
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
