--- a/package.json
+++ b/package.json
@@ -7,23 +7,40 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=development foreman start -f Procfile.dev-server"
+    "start": "NODE_ENV=development TAILWIND_MODE=watch foreman start -f Procfile.dev-server"
   },
   "dependencies": {
     "@babel/preset-react": "^7.16.7",
     "@inertiajs/inertia": "^0.10.1",
     "@inertiajs/inertia-react": "^0.7.1",
     "@inertiajs/progress": "^0.2.6",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^9",
+    "babel-plugin-macros": "^3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "postcss": "^7",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
-    "@rails/webpacker": "5.4.3",
-    "webpack-dev-server": "^3"
-  }
+    "@rails/webpacker": "6.0.0-rc.6",
+    "@webpack-cli/serve": "^1.6.0",
+    "chokidar": "^3.5.2",
+    "webpack-dev-server": "^4.7.2"
+  },
+  "babel": {
+    "presets": [
+      "./node_modules/@rails/webpacker/package/babel/preset.js"
+    ]
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
