--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "@babel/core": "^7.16.7",
     "@rails/webpacker": "6.0.0-rc.6",
     "@webpack-cli/serve": "^1.6.0",
+    "css-loader": "^6.5.1",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
+    "style-loader": "^3.3.1",
     "webpack-dev-server": "^4.7.2"
   },
   "babel": {
