--- a/package.json
+++ b/package.json
@@ -7,28 +7,50 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=development foreman start -f Procfile.dev-server"
+    "start": "NODE_ENV=development foreman start -f Procfile.dev-server",
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.16.5",
     "@babel/preset-react": "^7.16.7",
     "@inertiajs/inertia": "^0.10.1",
     "@inertiajs/inertia-react": "^0.7.1",
     "@inertiajs/progress": "^0.2.6",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@vechaiui/core": "^0.6.0",
+    "@vechaiui/react": "^0.2.1",
+    "autoprefixer": "^10.4.2",
     "babel-plugin-macros": "^3.1.0",
+    "classnames": "^2.3.1",
+    "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "rsuite": "^5.4.4",
+    "tailwindcss": "^3.0.12",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@rails/webpacker": "6.0.0-rc.6",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "@webpack-cli/serve": "^1.6.0",
     "css-loader": "^6.5.1",
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "style-loader": "^3.3.1",
+    "typescript": "^4.5.4",
     "webpack-dev-server": "^4.7.2"
   },
   "babel": {
@@ -38,5 +60,6 @@
   },
   "browserslist": [
     "defaults"
-  ]
+  ],
+  "lint": "tslint --project tslint.json"
 }
