--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "^10.4.2",
     "babel-plugin-macros": "^3.1.0",
     "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
