--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -33,11 +33,11 @@ default: &default
     - .woff2
 
   extensions:
-    - .jsx
-    - .js
-    - .ts
     - .tsx
+    - .ts
+    - .jsx
     - .mjs
+    - .js
     - .sass
     - .scss
     - .css
@@ -60,7 +60,7 @@ development:
     host: localhost
     port: 3035
     public: localhost:3035
-    hmr: true
+    hmr: false
     # Inline should be set to true if using HMR
     inline: true
     overlay: true
