--- a/package.json
+++ b/package.json
@@ -7,58 +7,47 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=development foreman start -f Procfile.dev-server"
+    "start": "NODE_ENV=development foreman start -f Procfile.dev-server",
+    "build:css": "postcss ./app/assets/stylesheets/application.postcss.css -o ./app/assets/builds/application.css"
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.16.5",
-    "@babel/preset-react": "^7.16.7",
-    "@inertiajs/inertia": "^0.10.1",
-    "@inertiajs/inertia-react": "^0.7.1",
-    "@inertiajs/progress": "^0.2.6",
+    "@inertiajs/inertia": "^0.11.0",
+    "@inertiajs/inertia-react": "^0.8.0",
+    "@inertiajs/progress": "^0.2.7",
     "@radix-ui/react-icons": "^1.0.3",
+    "@rails/webpacker": "5.4.3",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
     "@vechaiui/core": "^0.6.0",
     "@vechaiui/react": "^0.2.1",
-    "autoprefixer": "^10.4.2",
-    "babel-plugin-macros": "^3.1.0",
     "classnames": "^2.3.1",
-    "lodash": "^4.17.21",
-    "postcss": "^8.4.5",
-    "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "tailwindcss": "^3.0.12",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@rails/webpacker": "5.4.3",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
-    "@webpack-cli/serve": "^1.6.0",
-    "astroturf": "^1.0.0",
-    "css-loader": "^6.5.1",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "autoprefixer": "^10.4.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "eslint": "^8.6.0",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "mini-css-extract-plugin": "^2.4.6",
+    "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-import": "^14.0.2",
-    "postcss-loader": "^6.2.1",
-    "postcss-nested": "^5.0.6",
-    "postcss-preset-env": "^7.2.0",
-    "style-loader": "^3.3.1",
+    "postcss-nesting": "^10.1.1",
+    "tailwindcss": "^3.0.12",
     "typescript": "^4.5.4",
-    "webpack-dev-server": "^3"
+    "webpack": "^4.46.0",
+    "webpack-dev-server": "^3",
+    "webpack-cli": "^3.3.12"
   }
 }
