--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -33,11 +33,11 @@ default: &default
     - .woff2
 
   extensions:
-    - .tsx
-    - .ts
     - .jsx
-    - .mjs
     - .js
+    - .ts
+    - .tsx
+    - .mjs
     - .sass
     - .scss
     - .css
@@ -52,7 +52,7 @@ default: &default
 
 development:
   <<: *default
-  compile: true
+  compile: false
 
   # Reference: https://webpack.js.org/configuration/dev-server/
   dev_server:
@@ -60,7 +60,7 @@ development:
     host: localhost
     port: 3035
     public: localhost:3035
-    hmr: false
+    hmr: true
     # Inline should be set to true if using HMR
     inline: true
     overlay: true
