--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "@inertiajs/inertia": "^0.11.0",
     "@inertiajs/inertia-react": "^0.8.0",
     "@inertiajs/progress": "^0.2.7",
+    "@material-tailwind/react": "^0.3.4",
     "@radix-ui/react-icons": "^1.0.3",
     "@rails/webpacker": "^6.0.0-rc.6",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
-    "@vechaiui/core": "^0.6.0",
-    "@vechaiui/react": "^0.2.1",
     "astroturf": "^1.0.0",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
@@ -27,6 +26,7 @@
     "style-loader": "^3.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.7",
     "@babel/eslint-parser": "^7.16.5",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
@@ -36,6 +36,7 @@
     "@typescript-eslint/parser": "^5.9.0",
     "@webpack-cli/serve": "^1.6.0",
     "autoprefixer": "^10.4.2",
+    "babel-loader": "^8.2.3",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "css-loader": "^6.5.1",
