Implements admin layout

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,7 @@
 		"react/boolean-prop-naming": [ "error" ],
 		"react/no-typos": [ "error" ],
 		"react/jsx-curly-spacing": [ "error", {"when": "always"} ],
-		"react/display-name": ["off"]
+		"react/display-name": ["off"],
+    "react/prop-types": 0
 	}
 }
