--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,15 @@
 			"MemberExpression": 1,
 			"ArrayExpression": 1
 		} ],
+		"@typescript-eslint/member-delimiter-style": ["error", {
+			"multiline": {
+				"delimiter": "none"
+			},
+			"singleline": {
+				"delimiter": "comma"
+			},
+			"multilineDetection": "brackets"
+		}],
 		"linebreak-style": [ "error", "unix" ],
 		"quotes": [ "error", "single" ],
 		"semi": [ "error", "never" ],
@@ -37,13 +46,15 @@
 		"no-prototype-builtins": [ 0 ],
 		"space-infix-ops": [ "error" ],
 		"no-trailing-spaces": "error",
-		"object-curly-spacing": [ 1, "always", {
+		"object-curly-spacing": [ 2, "always", {
 			"objectsInObjects": true 
 		}],
+		"computed-property-spacing": 2,
+		"array-bracket-spacing": 0,
 		"brace-style": ["error", "1tbs", { "allowSingleLine": true }],
 		"react/boolean-prop-naming": [ "error" ],
 		"react/no-typos": [ "error" ],
-		"react/jsx-curly-spacing": [ "error", {"when": "always"} ],
+		"react/jsx-curly-spacing": [ "error", {"when": "always", "children": true} ],
 		"react/display-name": ["off"],
     "react/prop-types": 0
 	}
