--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@inertiajs/inertia": "^0.11.0",
     "@inertiajs/inertia-react": "^0.8.0",
     "@inertiajs/progress": "^0.2.7",
-    "@material-tailwind/react": "^0.3.4",
     "@radix-ui/react-icons": "^1.0.3",
     "@rails/webpacker": "^6.0.0-rc.6",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
+    "@tippyjs/react": "^4.2.6",
     "astroturf": "^1.0.0",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
@@ -54,6 +54,7 @@
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.2.0",
+    "react-html-props": "^1.0.32",
     "tailwindcss": "^3.0.12",
     "typescript": "^4.5.4",
     "webpack": "^5.53.0",
