--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,25 +19,16 @@ AllCops:
 # Metrics Cops
 
 Metrics/ClassLength:
-  Description: 'Avoid classes longer than 100 lines of code.'
-  Max: 100
-  Enabled: true
+  Enabled: false
 
 Metrics/ModuleLength:
-  Description: 'Avoid modules longer than 100 lines of code.'
-  Max: 100
-  Enabled: true
+  Enabled: false
 
 Metrics/ParameterLists:
-  Description: 'Pass no more than four parameters into a method.'
-  Max: 4
-  Enabled: true
+  Enabled: false
 
 Metrics/MethodLength:
-  Description: 'Avoid methods longer than 5 lines of code.'
-  StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#short-methods'
-  Max: 5
-  Enabled: true
+  Enabled: false
 
 Metrics/BlockLength:
   CountComments: false
