--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.24.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "styled-components": "^5.3.3"
   },
   "resolutions": {
