--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.3.0",
     "@mui/styled-engine-sc": "npm:@mui/styled-engine-sc@latest",
+    "@mui/x-data-grid": "^5.3.0",
     "@rails/webpacker": "^6.0.0-rc.6",
     "astroturf": "^1.0.0",
     "classnames": "^2.3.1",
