--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@rails/webpacker": "^6.0.0-rc.6",
     "astroturf": "^1.0.0",
     "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
     "framer-motion": "^6.0.0",
     "material-ui-popup-state": "^2.0.0",
     "postcss-nesting": "^10.1.2",
