--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,14 @@
 		"es2021": true
 	},
 	"extends": [
-		"plugin:react/recommended"
+		"plugin:react/recommended",
+    "plugin:import/typescript"
 	],
+	"settings": {
+		"import/resolver": {
+			"typescript": {}
+		}
+	},
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaFeatures": {
@@ -15,6 +21,7 @@
 		"sourceType": "module",
 		"requireConfigFile": false
 	},
+
 	"plugins": [
 		"react",
 		"@typescript-eslint"
