--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=development foreman start -f Procfile.dev-server"
+    "start": "NODE_ENV=development foreman start -f Procfile.dev"
   },
   "dependencies": {
     "@fontsource/roboto": "^4.5.1",
@@ -18,7 +18,7 @@
     "@mui/material": "^5.3.0",
     "@mui/styled-engine-sc": "npm:@mui/styled-engine-sc@latest",
     "@mui/x-data-grid": "^5.3.0",
-    "@rails/webpacker": "^6.0.0-rc.6",
+    "@vitejs/plugin-react": "^1.1.4",
     "astroturf": "^1.0.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
@@ -43,14 +43,13 @@
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
-    "@webpack-cli/serve": "^1.6.0",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.3.1",
     "eslint": "^8.6.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
@@ -66,9 +65,9 @@
     "react-html-props": "^1.0.32",
     "style-loader": "^3.3.1",
     "typescript": "^4.5.4",
-    "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.7.3"
+    "vite": "^2.7.7",
+    "vite-plugin-ruby": "^3.0.5",
+    "vite-tsconfig-paths": "^3.3.17"
   },
   "browserslist": [
     "defaults"
