--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,14 +17,14 @@
 		"ecmaFeatures": {
 			"jsx": true
 		},
-		"ecmaVersion": 13,
+		"ecmaVersion": "latest",
 		"sourceType": "module",
 		"requireConfigFile": false
 	},
-
 	"plugins": [
 		"react",
-		"@typescript-eslint"
+		"@typescript-eslint",
+    "import"
 	],
 	"rules": {
 		"indent": "off",
