--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.3.0",
     "@mui/styled-engine-sc": "npm:@mui/styled-engine-sc@latest",
     "@mui/x-data-grid": "^5.3.0",
+    "@rollup/plugin-dynamic-import-vars": "^1.4.2",
     "@vitejs/plugin-react": "^1.1.4",
     "astroturf": "^1.0.0",
     "classnames": "^2.3.1",
