--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
 		// "rootDir": "./",                                  /* Specify the root folder within your source files. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
-    "typeRoots": ["./node_modules/@types", "./app/frontend/**/*.d.ts"],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
+    "typeRoots": ["./node_modules/@types", "./app/frontend/types/**/*.d.ts", "./app/frontend/**/*.d.ts", "./app/javascript/**/*.d.ts"],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     "resolveJsonModule": true,                        /* Enable importing .json files */
@@ -102,6 +102,6 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "exclude": ["**/*.spec.ts", "node_modules", "vendor", "public"],
-  "include": ["app/frontend/**/*.ts", "app/frontend/**/*.tsx", "app/frontend/entrypoints/application.jsx"],
+  "include": ["app/frontend/**/*.ts", "app/frontend/**/*.tsx", "app/frontend/entrypoints/application.jsx", "./app/javascript/**/*.d.ts"],
   "compileOnSave": false
 }
