--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "material-ui-popup-state": "^2.0.0",
     "postcss-nesting": "^10.1.2",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.38.6",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-perfect-scrollbar": "^1.5.8",
