--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,8 +28,8 @@
     "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./app/frontend",                                  /* Specify the base directory to resolve non-relative module names. */
     "paths": {
-			"@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"],
-      "@/*": ["./app/frontend/*"]
+      "@/*": ["./app/frontend/*"],
+			"@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"]
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
 		// "rootDir": "./",                                  /* Specify the root folder within your source files. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
