--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@inertiajs/inertia-react": "^0.8.0",
     "@inertiajs/progress": "^0.2.7",
     "@mui/icons-material": "^5.3.0",
+    "@mui/lab": "^5.0.0-alpha.66",
     "@mui/material": "^5.3.0",
     "@mui/styled-engine-sc": "npm:@mui/styled-engine-sc@latest",
     "@mui/x-data-grid": "^5.3.0",
