--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "framer-motion": "^6.0.0",
+    "immutable": "^4.0.0",
     "material-ui-popup-state": "^2.0.0",
     "postcss-nesting": "^10.1.2",
     "react": "^17.0.2",
