--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -118,6 +118,9 @@ Style/TrailingCommaInHashLiteral:
     - no_comma
   Enabled: true
 
+Style/BlockComments:
+  Enabled: false
+
 # Layout Cops
 
 Layout/ArgumentAlignment:
