--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "@mantine/vanilla-extract": "^7.7.1",
     "@tabler/icons-react": "^3.1.0",
     "@tanstack/react-query": "^5.29.0",
-    "@tiptap/extension-highlight": "^2.2.6",
-    "@tiptap/extension-link": "^2.2.6",
-    "@tiptap/extension-subscript": "^2.2.6",
-    "@tiptap/extension-superscript": "^2.2.6",
-    "@tiptap/extension-text-align": "^2.2.6",
-    "@tiptap/extension-underline": "^2.2.6",
-    "@tiptap/pm": "^2.2.6",
-    "@tiptap/react": "^2.2.6",
-    "@tiptap/starter-kit": "^2.2.6",
+    "@tiptap/extension-highlight": "^2.3.0",
+    "@tiptap/extension-link": "^2.3.0",
+    "@tiptap/extension-subscript": "^2.3.0",
+    "@tiptap/extension-superscript": "^2.3.0",
+    "@tiptap/extension-text-align": "^2.3.0",
+    "@tiptap/extension-underline": "^2.3.0",
+    "@tiptap/pm": "^2.3.0",
+    "@tiptap/react": "^2.3.0",
+    "@tiptap/starter-kit": "^2.3.0",
     "@xstate/react": "^4.1.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
@@ -68,16 +68,17 @@
     "@tanstack/eslint-plugin-query": "^5.28.11",
     "@tanstack/react-query-devtools": "^5.29.0",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.2",
+    "@testing-library/react": "^14.3.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.0",
-    "@types/node": "^20.12.5",
-    "@types/react": "^18.2.74",
-    "@types/react-big-calendar": "^1",
+    "@types/node": "^20.12.6",
+    "@types/postcss-flexbugs-fixes": "^5",
+    "@types/react": "^18.2.75",
+    "@types/react-big-calendar": "^1.8.9",
     "@types/react-dom": "^18.2.24",
-    "@typescript-eslint/eslint-plugin": "^7.5.0",
-    "@typescript-eslint/parser": "^7.5.0",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@wyw-in-js/vite": "^0.5.0",
     "autoprefixer": "^10.4.19",
@@ -98,6 +99,10 @@
     "jest": "^29.7.0",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^16.1.0",
+    "postcss-nesting": "^12.1.1",
+    "postcss-preset-env": "^9.5.4",
     "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
     "ts-jest": "^29.1.2",
@@ -109,9 +114,6 @@
     "vite-plugin-ruby": "^5.0.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.4.0"
-  },
-  "resolutions": {
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
   },
   "browserslist": [
     "defaults"
