--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,7 +28,8 @@ Style/HashTransformValues:
 Style/FrozenStringLiteralComment:
   Enabled: false
 Style/StringLiterals:
-  Enabled: false
+  Enabled: true
+  EnforcedStyle: double_quotes
 Style/NumericLiterals:
   Enabled: false
 Style/ClassAndModuleChildren:
