--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dinero.js": "^1.9.1",
     "google-libphonenumber": "^3.2.40",
     "lodash": "^4.17.21",
+    "mantine-flagpack": "^4.1.1",
     "normalize-url": "^8.0.1",
     "react": "^19.0.0",
     "react-big-calendar": "^1.17.1",
