--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
+    "@fragaria/address-formatter": "^6.4.0",
     "@inertiajs/react": "^2.0.0",
     "@linaria/core": "^6.2.0",
     "@mantine/core": "^7.15.2",
