feat: 🎸 trying authentication

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dayjs": "^1.11.13",
     "dinero.js": "^1.9.1",
     "google-libphonenumber": "^3.2.40",
+    "indefinite": "^2.5.1",
     "lodash": "^4.17.21",
     "mantine-flagpack": "^4.1.1",
     "normalize-url": "^8.0.1",
@@ -80,6 +81,7 @@
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/google-libphonenumber": "^7.4.30",
+    "@types/indefinite": "^2",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.14",
     "@types/node": "^22.10.5",
