--- a/package.json
+++ b/package.json
@@ -22,28 +22,28 @@
     "@fragaria/address-formatter": "^6.4.0",
     "@inertiajs/react": "^2.0.3",
     "@linaria/core": "^6.2.0",
-    "@mantine/core": "^7.16.2",
-    "@mantine/dates": "^7.16.2",
-    "@mantine/dropzone": "^7.16.2",
-    "@mantine/form": "^7.16.2",
-    "@mantine/hooks": "^7.16.2",
-    "@mantine/modals": "^7.16.2",
+    "@mantine/core": "^7.17.0",
+    "@mantine/dates": "^7.17.0",
+    "@mantine/dropzone": "^7.17.0",
+    "@mantine/form": "^7.17.0",
+    "@mantine/hooks": "^7.17.0",
+    "@mantine/modals": "^7.17.0",
     "@mantine/next": "^6.0.22",
-    "@mantine/notifications": "^7.16.2",
+    "@mantine/notifications": "^7.17.0",
     "@mantine/prism": "^6.0.22",
     "@mantine/rte": "^5.10.5",
-    "@mantine/tiptap": "^7.16.2",
-    "@mantine/vanilla-extract": "^7.16.2",
-    "@tanstack/react-query": "^5.65.0",
-    "@tiptap/extension-highlight": "^2.11.3",
-    "@tiptap/extension-link": "^2.11.3",
-    "@tiptap/extension-subscript": "^2.11.3",
-    "@tiptap/extension-superscript": "^2.11.3",
-    "@tiptap/extension-text-align": "^2.11.3",
-    "@tiptap/extension-underline": "^2.11.3",
-    "@tiptap/pm": "^2.11.3",
-    "@tiptap/react": "^2.11.3",
-    "@tiptap/starter-kit": "^2.11.3",
+    "@mantine/tiptap": "^7.17.0",
+    "@mantine/vanilla-extract": "^7.17.0",
+    "@tanstack/react-query": "^5.66.7",
+    "@tiptap/extension-highlight": "^2.11.5",
+    "@tiptap/extension-link": "^2.11.5",
+    "@tiptap/extension-subscript": "^2.11.5",
+    "@tiptap/extension-superscript": "^2.11.5",
+    "@tiptap/extension-text-align": "^2.11.5",
+    "@tiptap/extension-underline": "^2.11.5",
+    "@tiptap/pm": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "@xstate/react": "^5.0.2",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -53,12 +53,13 @@
     "indefinite": "^2.5.1",
     "lodash": "^4.17.21",
     "mantine-flagpack": "^4.1.1",
+    "mantine-react-table": "^2.0.0-beta.9",
     "normalize-url": "^8.0.1",
     "react": "^19.0.0",
     "react-big-calendar": "^1.17.1",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
-    "react-html-props": "^2.0.9",
+    "react-html-props": "^2.0.10",
     "react-icons": "^5.4.0",
     "react-use-url": "^1.0.5",
     "use-inertia-form": "^4.5.0",
@@ -67,30 +68,30 @@
   },
   "devDependencies": {
     "@axe-core/react": "^4.10.1",
-    "@babel/core": "^7.26.7",
+    "@babel/core": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
-    "@commitlint/cli": "^19.6.1",
-    "@commitlint/config-conventional": "^19.6.0",
-    "@eslint/compat": "^1.2.5",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
+    "@eslint/compat": "^1.2.6",
     "@eslint/json": "^0.10.0",
-    "@stylistic/eslint-plugin": "^3.0.0",
-    "@tanstack/eslint-plugin-query": "^5.65.0",
-    "@tanstack/react-query-devtools": "^5.65.0",
+    "@stylistic/eslint-plugin": "^4.0.0",
+    "@tanstack/eslint-plugin-query": "^5.66.1",
+    "@tanstack/react-query-devtools": "^5.66.7",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/google-libphonenumber": "^7.4.30",
     "@types/indefinite": "^2.3.4",
     "@types/jest": "^29.5.14",
-    "@types/lodash": "^4.17.14",
-    "@types/node": "^22.10.10",
+    "@types/lodash": "^4.17.15",
+    "@types/node": "^22.13.4",
     "@types/postcss-flexbugs-fixes": "^5.0.3",
-    "@types/react": "^19.0.8",
+    "@types/react": "^19.0.10",
     "@types/react-big-calendar": "^1.16.1",
-    "@types/react-dom": "^19.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "@typescript-eslint/parser": "^8.22.0",
+    "@types/react-dom": "^19.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
     "@vitejs/plugin-react": "^4.3.4",
     "@wyw-in-js/vite": "^0.5.5",
     "autoprefixer": "^10.4.20",
@@ -98,8 +99,8 @@
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^2.1.4",
     "commitizen": "^4.3.1",
-    "eslint": "9.19.0",
-    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint": "9.20.1",
+    "eslint-import-resolver-typescript": "^3.8.2",
     "eslint-plugin-better-styled-components": "^1.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-json": "^4.0.1",
@@ -117,19 +118,19 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
-    "postcss-preset-env": "^10.1.3",
+    "postcss-preset-env": "^10.1.4",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "type-fest": "^4.33.0",
+    "type-fest": "^4.35.0",
     "typescript": "^5.7.3",
-    "vite": "^6.0.11",
+    "vite": "^6.1.0",
     "vite-plugin-dynamic-import": "^1.6.0",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-ruby": "^5.1.1",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.4"
+    "vitest": "^3.0.6"
   },
   "resolutions": {
     "@types/react": "^18.2.75",
