--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "@toast-ui/react-calendar": "^2.1.3",
     "@xstate/react": "^5.0.2",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
