--- a/package.json
+++ b/package.json
@@ -147,7 +147,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts}": [
+    "*.{js,jsx,ts,tsx}": [
       "npm run lint:fix"
     ],
     "*.{md,json,yml}": [
