--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "dinero.js": "^1.9.1",
     "google-libphonenumber": "^3.2.40",
     "indefinite": "^2.5.1",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "mantine-flagpack": "^4.1.1",
     "mantine-react-table": "^2.0.0-beta.9",
     "normalize-url": "^8.0.1",
@@ -77,7 +77,10 @@
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/compat": "^1.2.7",
     "@eslint/json": "^0.11.0",
+    "@stylelint/postcss-css-in-js": "^0.38.0",
     "@stylistic/eslint-plugin": "^4.2.0",
+    "@stylistic/stylelint-config": "^2.0.0",
+    "@stylistic/stylelint-plugin": "^3.1.2",
     "@tanstack/eslint-plugin-query": "^5.68.0",
     "@tanstack/react-query-devtools": "^5.70.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -86,7 +89,7 @@
     "@types/google-libphonenumber": "^7.4.30",
     "@types/indefinite": "^2.3.4",
     "@types/jest": "^29.5.14",
-    "@types/lodash": "^4.17.16",
+    "@types/lodash-es": "^4",
     "@types/node": "^22.13.14",
     "@types/postcss-flexbugs-fixes": "^5.0.3",
     "@types/react": "^19.0.12",
@@ -123,6 +126,9 @@
     "postcss-preset-env": "^10.1.5",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
+    "postcss-syntax": "^0.36.2",
+    "stylelint": "^16.17.0",
+    "stylelint-config-standard": "^37.0.0",
     "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
     "type-fest": "^4.38.0",
