feat: 🎸 actually implements a calendar (sort of)

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,9 @@
-require:
-  - rubocop-factory_bot
+plugins:
   - rubocop-rails
   - rubocop-rspec
+  
+require:
+  - rubocop-factory_bot
 
 AllCops:
   Exclude:
