--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@daypilot/daypilot-lite-react": "^3.32.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
+    "@formkit/auto-animate": "^0.8.2",
     "@fragaria/address-formatter": "^6.5.0",
     "@inertiajs/react": "^2.0.5",
     "@linaria/core": "^6.3.0",
@@ -54,6 +55,7 @@
     "google-libphonenumber": "^3.2.40",
     "indefinite": "^2.5.1",
     "lodash-es": "^4.17.21",
+    "mantine-contextmenu": "^7.17.1",
     "mantine-flagpack": "^4.1.1",
     "mantine-react-table": "^2.0.0-beta.9",
     "normalize-url": "^8.0.1",
