feat: 🎸 adding permissions views

--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "dinero.js": "^1.9.1",
     "framer-motion": "^12.7.2",
     "google-libphonenumber": "^3.2.40",
+    "i18next": "^25.0.1",
+    "i18next-browser-languagedetector": "^8.0.5",
+    "i18next-http-backend": "^3.0.2",
     "indefinite": "^2.5.1",
     "lodash-es": "^4.17.21",
     "mantine-contextmenu": "^7.17.1",
@@ -66,6 +69,7 @@
     "react-dom": "^19.1.0",
     "react-error-boundary": "^5.0.0",
     "react-html-props": "^2.0.10",
+    "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-use-url": "^1.0.5",
     "use-inertia-form": "^4.6.0",
