--- a/config/i18n.yml
+++ b/config/i18n.yml
@@ -1,6 +1,6 @@
 ---
 translations:
-  - file: app/frontend/lib/locales/locales.json
+  - file: "app/frontend/lib/locales/:locale.json"
     patterns:
       - "*"
       - "!*.activerecord"
