chore: 🤖 updates to Mantine v8

--- a/package.json
+++ b/package.json
@@ -27,18 +27,18 @@
     "@fragaria/address-formatter": "^6.5.0",
     "@inertiajs/react": "^2.0.11",
     "@linaria/core": "^6.3.0",
-    "@mantine/core": "^7.17.7",
-    "@mantine/dates": "^7.17.7",
-    "@mantine/dropzone": "^7.17.7",
-    "@mantine/form": "^7.17.7",
-    "@mantine/hooks": "^7.17.7",
-    "@mantine/modals": "^7.17.7",
+    "@mantine/core": "^8.0.1",
+    "@mantine/dates": "^8.0.1",
+    "@mantine/dropzone": "^8.0.1",
+    "@mantine/form": "^8.0.1",
+    "@mantine/hooks": "^8.0.1",
+    "@mantine/modals": "^8.0.1",
     "@mantine/next": "^6.0.22",
-    "@mantine/notifications": "^7.17.7",
+    "@mantine/notifications": "^8.0.1",
     "@mantine/prism": "^6.0.22",
     "@mantine/rte": "^5.10.5",
-    "@mantine/tiptap": "^7.17.7",
-    "@mantine/vanilla-extract": "^7.17.7",
+    "@mantine/tiptap": "^8.0.1",
+    "@mantine/vanilla-extract": "^8.0.1",
     "@tanstack/react-query": "^5.76.1",
     "@tiptap/extension-highlight": "^2.12.0",
     "@tiptap/extension-link": "^2.12.0",
@@ -63,7 +63,7 @@
     "lodash-es": "^4.17.21",
     "mantine-contextmenu": "^7.17.1",
     "mantine-flagpack": "^4.1.1",
-    "mantine-react-table": "^2.0.0-beta.9",
+    "mantine-react-table": "^1.3.4",
     "normalize-url": "^8.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
